Fixed issue: if post image is too big, the page is ugly.

--- a/mtum/static/css/blog.css
+++ b/mtum/static/css/blog.css
@@ -997,3 +997,7 @@ img.avatar:-moz-broken {
 .endless_more {
   display: none;
 }
+
+.post img {
+  max-width: 500px;
+}
